crates/pixi_manifest/src/manifests/snapshots/pixi_manifest__manifests__project__tests__get_or_insert_toml_table.snap
---
source: crates/pixi_manifest/src/manifests/project.rs
expression: manifest.document.to_string()
---
        [project]
        name = "foo"
        version = "0.1.0"
        channels = []
        platforms = ["linux-64", "win-64", "osx-64"]
