crates/pixi_manifest/src/manifests/snapshots/pixi_manifest__manifests__project__tests__nameless_to_toml.snap
---
source: crates/pixi_manifest/src/manifests/project.rs
expression: table
---
"rattler >=1" = ">=1"
"conda-forge::rattler" = { channel = "conda-forge" }
"conda-forge::rattler[version=>3.0]" = { version = ">3.0", channel = "conda-forge" }
"rattler 1 *cuda" = { version = "==1", build = "*cuda" }
"rattler >=1 *cuda" = { version = ">=1", build = "*cuda" }
