crates/pixi_manifest/src/manifests/snapshots/pixi_manifest__manifests__project__tests__test_add_environment_pyproject.toml.snap
---
source: crates/pixi_manifest/src/manifests/project.rs
expression: source.to_string()
---
[tool.pixi.environments]
foo = []
bar = ["not-default"]
baz = { features = ["default"], solve-group = "group1" }
foobar = { features = ["default"], solve-group = "group1", no-default-feature = true }
barfoo = { features = ["default"], no-default-feature = true }
