crates/pixi_manifest/src/manifests/snapshots/pixi_manifest__manifests__project__tests__test_remove_environment_pyproject.toml.snap
---
source: crates/pixi_manifest/src/manifests/project.rs
expression: source.to_string()
---
[tool.pixi.environments]
bar = ["default"]
